syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  rpc SayHello(stream HelloRequest) returns (stream HelloReply);
  rpc SendMessageToClient(SendMessageRequest) returns (HelloReply);
  rpc GetMessages(GetMessagesRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
	string clientId = 1;
	string message = 2;
	string timestamp = 3;
}

// The response message containing the greetings.
message HelloReply {
	string SenderClientId = 1; // Add SenderClientId
	string message = 2;
	string timestamp = 3;
}

message SendMessageRequest {
	string RecipientClientId = 1;
	string SenderClientId = 2; // Add SenderClientId
	string Message = 3;
}

message GetMessagesRequest {
  string clientId = 1;
}